--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,11 @@
 body {
   margin: 0;
-  font-family: 'Inter', system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+}
+*{
+  font-family: 'Inter', system-ui;
 }
 .wrapper {
   background: #FFFFFF;
@@ -46,8 +48,18 @@ header{
 }
 .content{
   margin-left: 60px;
-  h1{
-    margin-bottom: 40px;
+  .search-block{
+    margin-right: 60px;
+    display: flex;
+    border: 1px solid #F2F2F2;
+    border-radius: 10px;
+    padding: 0 15px;
+    input{
+      border: 0;
+      padding: 13px;
+      font-size: 16px;
+      width: 200px;
+    }
   }
   .sneakers{
     display: flex;
@@ -58,6 +70,7 @@ header{
     width: 220px;
     border-radius: 40px;
     margin-right: 30px;
+    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
     h5{
       font-weight: 400;
       font-size: 14px;
@@ -79,6 +92,10 @@ header{
     b{
       font-size: 14px;
     }
+    &:hover{
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.05);
+      transform: translateY(-5px);
+    }
     }
   }
   button{
@@ -90,4 +107,128 @@ header{
     width: 32px;
     cursor: pointer;
   }
+  .favorite{
+    position: absolute;
+    cursor:pointer;
+  }
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+.drawer{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  h2{
+    margin: 0;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.cartItem{
+  border: 1px solid #f3f3f3;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+  p{
+    margin: 0;
+    font-size: 16px;
+  }
+  b{
+    font-size: 14px;
+  }
+  img{
+    margin-right: 20px;
+  }
+  &Descr{
+    margin-right: 20px;
+  }
+  .removeBtn{
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.15s ease-in-out;
+    &:hover{
+      opacity: 1;
+    }
+  }
 
+}
+.cartItemImg{
+  height: 70px;
+  width: 70px;
+  background-size: contain;
+  background-position: 0 -3px;
+  background-repeat: no-repeat;
+  margin-right: 20px;
+}
+.drawerFooter{
+  ul{
+    display: block;
+    margin-bottom: 40px !important;
+    li{
+      display: flex;
+      align-items:flex-end;
+      margin-bottom: 20px;
+      div{
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
+    }
+  }
+  .greenButton{
+    position: relative;
+    img{
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      transition: transform 0.15s ease-in-out;
+    }
+    &:hover{
+      img{
+        transform: translateX(5px);
+      }
+    }
+  }
+
+}
+.cartItems{
+  flex: 1;
+}
+.greenButton{
+  width: 100%;
+  height: 55px;
+  background: #9DD558;
+  border-radius: 18px;
+  border: none;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 500px;
+  transition: background 0.1s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    background: lighten($color: #9DD558, $amount: 5%)
+  }
+  &:active{
+    background: darken($color: #9DD558, $amount: 5%)
+  }
+}
+.items{
+  overflow: auto;
+  margin-bottom: 40px;
+}
