--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-body {
+body{
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -7,181 +7,84 @@ body {
 *{
   font-family: 'Inter', system-ui;
 }
-.wrapper {
-  background: #FFFFFF;
+.wrapper{
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
 }
-header{
+header {
   border-bottom: 1px solid #eaeaea;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 40px;
-}
-.headerLeft{
-  display: flex;
-  align-items: center;
+  img {
+    margin-right: 15px;
+  }
   h3, p {
     margin: 0;
   }
-  h3{
-    text-transform: uppercase;
-  }
-  img{
-    margin-right: 15px;
-  }
-  p{
-    opacity: 0.5;
+}
+.content {
+  h1 {
+    margin: 0;
   }
 }
-.headerRight{
-  display: flex;
-  li{
-    margin-right: 30px;
-    img{
-      margin-right: 10px;
-    }
+.button {
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+}
+.search-block {
+  border: 1px solid #f3f3f3;
+  border-radius: 10px;
+  padding: 0 15px;
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
   }
 }
-.content{
-  margin-left: 60px;
-  .search-block{
-    margin-right: 60px;
-    display: flex;
-    border: 1px solid #F2F2F2;
-    border-radius: 10px;
-    padding: 0 15px;
-    input{
-      border: 0;
-      padding: 13px;
-      font-size: 16px;
-      width: 200px;
-    }
-  }
-  .sneakers{
-    display: flex;
-  }
-  .card{
-    border: 1px solid #F3F3F3;
-    padding: 30px;
-    width: 220px;
-    border-radius: 40px;
-    margin-right: 30px;
-    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-    h5{
-      font-weight: 400;
-      font-size: 14px;
-    }
-    .priceWrapper{
-      display: flex;
-      justify-content: space-between;
-      align-items:center;
-    }
-    .price{
-      display: flex;
-      flex-direction: column;
-    }
-    span{
-      text-transform: uppercase;
-      opacity: 0.5;
-      font-size: 13px;
-    }
-    b{
-      font-size: 14px;
-    }
-    &:hover{
-      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.05);
-      transform: translateY(-5px);
-    }
-    }
-  }
-  button{
-    background: #FFFFFF;
-    border: 1px solid #F2F2F2;
-    border-radius: 8px;
-    box-sizing: border-box;
-    height: 32px;
-    width: 32px;
-    cursor: pointer;
-  }
-  .favorite{
-    position: absolute;
-    cursor:pointer;
-  }
-.overlay{
+.overlay {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
-.drawer{
+.drawer {
   display: flex;
   flex-direction: column;
   position: absolute;
   width: 420px;
   height: 100%;
   right: 0;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
-  h2{
+  .items {
+    flex: 1;
+    overflow: auto;
+    margin-bottom: 40px;
+  }
+  h2 {
     margin: 0;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
   }
 }
-.cartItem{
-  border: 1px solid #f3f3f3;
-  border-radius: 20px;
-  overflow: hidden;
-  padding: 20px;
-  p{
-    margin: 0;
-    font-size: 16px;
-  }
-  b{
-    font-size: 14px;
-  }
-  img{
-    margin-right: 20px;
-  }
-  &Descr{
-    margin-right: 20px;
-  }
-  .removeBtn{
-    opacity: 0.5;
-    cursor: pointer;
-    transition: opacity 0.15s ease-in-out;
-    &:hover{
-      opacity: 1;
-    }
-  }
-
-}
-.cartItemImg{
-  height: 70px;
-  width: 70px;
-  background-size: contain;
-  background-position: 0 -3px;
-  background-repeat: no-repeat;
-  margin-right: 20px;
-}
-.drawerFooter{
-  ul{
+.cartTotalBlock {
+  ul {
     display: block;
     margin-bottom: 40px !important;
-    li{
+    li {
       display: flex;
-      align-items:flex-end;
+      align-items: flex-end;
       margin-bottom: 20px;
-      div{
+      div {
         flex: 1;
         height: 1px;
         border-bottom: 1px dashed #dfdfdf;
@@ -191,44 +94,65 @@ header{
       }
     }
   }
-  .greenButton{
+  .greenButton {
     position: relative;
-    img{
+    &:hover {
+      img {
+        transform: translateX(5px);
+      }
+    }
+    img {
       position: absolute;
       right: 30px;
       top: 20px;
       transition: transform 0.15s ease-in-out;
     }
-    &:hover{
-      img{
-        transform: translateX(5px);
-      }
-    }
   }
-
 }
-.cartItems{
-  flex: 1;
-}
-.greenButton{
+.greenButton {
   width: 100%;
   height: 55px;
-  background: #9DD558;
+  background: #9dd558;
   border-radius: 18px;
-  border: none;
-  color: #FFFFFF;
+  border: 0;
+  color: #fff;
   font-size: 16px;
-  font-weight: 500px;
-  transition: background 0.1s ease-in-out;
+  font-weight: 500;
   cursor: pointer;
-  &:hover{
-    background: lighten($color: #9DD558, $amount: 5%)
+  transition: background 0.1s ease-in-out;
+  &:hover {
+    background: lighten(#9dd558, 5%);
   }
-  &:active{
-    background: darken($color: #9DD558, $amount: 5%)
+  &:active {
+    background: darken(#9dd558, 5%);
   }
 }
-.items{
-  overflow: auto;
-  margin-bottom: 40px;
+.cartItem {
+  border: 1px solid #f3f3f3;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+  .cartItemImg {
+    height: 70px;
+    width: 70px;
+    background-size: contain;
+    background-position: 0 -3px;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+  }
+  p {
+    font-size: 16px;
+    margin: 0;
+  }
+  b {
+    font-size: 14px;
+  }
+  .removeBtn {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.15s ease-in-out;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
