--- a/src/index.scss
+++ b/src/index.scss
@@ -39,7 +39,6 @@ header {
   .greenButton {
     width: 245px;
     margin-top: 20px;
-
     &:hover {
       img {
         transform: rotate(180deg) translateX(3px);
@@ -122,6 +121,10 @@ header {
   }
   .greenButton {
     position: relative;
+
+    &:disabled{
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
     &:hover {
       img {
         transform: translateX(5px);
@@ -146,6 +149,10 @@ header {
   font-weight: 500;
   cursor: pointer;
   transition: background 0.1s ease-in-out;
+  &:disabled{
+    background-color:#bebebe;
+    cursor: default;
+  }
   &:hover {
     background: lighten(#9dd558, 5%);
   }
@@ -180,5 +187,17 @@ header {
     &:hover {
       opacity: 1;
     }
+  }
+}
+
+@keyframes button-loading {
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 0.7;
+  }
+  100%{
+    opacity: 1;
   }
 }
